--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <h1>Добро пожаловать!</h1>
         <div class="button-container">
-            <a href="https://www.youtube.com" target="_blank" class="button youtube">YouTube</a>
-            <a href="https://www.twitch.tv" target="_blank" class="button twitch">Twitch</a>
-            <a href="https://kinogo.ec" target="_blank" class="button kinogo">Kinogo</a>
-            <a href="https://www.kinopoisk.ru" target="_blank" class="button kinopoisk">КиноПоиск</a>
-            <a href="https://okko.tv" target="_blank" class="button okko">Okko</a>
+            <a href="https://www.youtube.com" target="_self"class="button youtube">YouTube</a>
+            <a href="https://www.twitch.tv" target="_self" class="button twitch">Twitch</a>
+            <a href="https://kinogo.ec" target="_self" class="button kinogo">Kinogo</a>
+            <a href="https://www.kinopoisk.ru" target="_self" class="button kinopoisk">КиноПоиск</a>
+            <a href="https://okko.tv" target="_self" class="button okko">Okko</a>
         </div>
     </div>
     <script src="script.js"></script>
